# mcp

./: .dockerignore  .env.example  .env.template  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PARTNERS.md  README.md  docker-compose.yml  pyproject.toml
config/: mcpConfigStdio.json
extra/: commands.txt  endpoints_spec_en.csv  full_descriptions.json  openapi_clean.json  openapi_filtered_3_1.json
extra/endpoints.lancedb/endpoints.lance/_versions/: 1.manifest
scripts/: check_embedings.py  generate.md  generate_docs_embeddings.py  generate_docs_embedings.py  generate_embedings.py  generate_endpoints_embeddings.py  generate_requests_models.py  generate_response_models.py  generate_serve.py  generate_tools.py  patch_vector_in_embeddings.py  select_embedding.py  split_openapi.py  split_opnapi_by_groups.py
src/: auth.py  client.py  server.py  state.py  store.py  views.py
src/mcp_server_twelve_data/: __init__.py  __main__.py  common.py  doc_tool.py  doc_tool_remote.py  doc_tool_response.py  key_provider.py  prompts.py  request_models.py  response_models.py  server.py  server_all_endpoints.py  tools.py  u_tool.py  u_tool_remote.py  u_tool_response.py
src/mcp_server_twelve_data/requests/: get_cryptocurrencies_params.py  get_forex_pairs_params.py  get_price_params.py  get_stocks_params.py  get_time_series_params.py
src/mcp_server_twelve_data/resources/docs.lancedb/docs.lance/_transactions/: 0-585cfd5c-4306-4de2-83fe-d2122196630d.txn  0-ffd47944-1a7d-4788-858b-73eef4a198cb.txn
src/mcp_server_twelve_data/resources/docs.lancedb/docs.lance/_versions/: 1.manifest
src/mcp_server_twelve_data/resources/docs.lancedb/docs.lance/data/: 4fc8d3bf-4abb-431c-bd6c-2368db1112e3.lance  8d27724f-18a5-4b37-8586-ba04078dc18d.lance
src/mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/_deletions/: 0-1-17152141179546175890.arrow  0-2-1209605495039702291.arrow
src/mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/_transactions/: 0-2483252b-c90e-4b43-882c-536d2dfcc209.txn  0-b87072a1-eb86-44f0-8625-d0ba5ffd6f0f.txn  0-fdf7c33f-c498-4b9c-8073-64072afd3ee5.txn  1-04b00303-7d4b-4ce2-b078-78490f9640e3.txn  2-3db4ad4b-d949-48f9-8715-694130aac751.txn
src/mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/_versions/: 1.manifest  2.manifest  3.manifest
src/mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/data/: 02762926-c530-40bb-8407-64198509fbad.lance  2e67dde4-3245-4fd5-beb5-6e522b67fdd2.lance  4501f27d-283f-46fa-b7c6-f1cf79f42302.lance  c741674d-ec35-482e-ae1e-1792d69706cf.lance
src/mcp_server_twelve_data/responses/: cryptocurrency_response_item.py  forex_response_item.py  get_cryptocurrencies_response.py  get_forex_pairs_response.py  get_price_response.py  get_stock_response.py  get_time_series_response.py  meta.py  stock_response_item.py  stock_response_item_access.py  time_series_item.py
src/oauth/: __init__.py  config.py  models.py  provider.py  storage.py
src/resources/endpoints.lancedb/endpoints.lance/_versions/: 1.manifest
src/resources/endpoints.lancedb/endpoints.lance/data/: 0bc1dddf-cc86-423f-89ff-83ef1821de7a.lance
src/tools/: account.py  analysis.py  fundamentals.py  market.py  mutual_funds.py  reference.py  regulatory.py
test/: common.py  endpoint_pairs.py  test_doc_tool.py  test_mcp_main.py  test_top_n_filter.py  test_user_plan.py
