[project]
name = "mcp-server-twelve-data"
version = "0.1.31"
description = "A Model Context Protocol server providing tools access Twelve Data."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Twelve Data, PBC." }]
maintainers = [{ name = "Kopyev Eugene", email = "kopyev.eugene@gmail.com" }]
keywords = ["twelve", "data", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bs4>=0.0.2",
    "click==8.2.1",
    "datamodel-code-generator==0.31.2",
    "lancedb>=0.23.0",
    "mcp[cli]>=1.9.4",
    "openai>=1.86.0",
    "pandas>=2.3.1",
    "pydantic==2.11.5",
    "pylint>=3.3.7",
    "pyyml>=0.0.2",
]

[project.scripts]
mcp-server-twelve-data = "mcp_server_twelve_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.389",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "datamodel-code-generator>=0.31.2",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"
addopts = "-s"
log_cli = true
log_cli_level = "INFO"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"mcp_server_twelve_data" = ["resources/**"]
[tool.setuptools.data-files]
"mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/data" = ["src/mcp_server_twelve_data/resources/endpoints.lancedb/endpoints.lance/data/*"]
