[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twelvedata-mcp"
version = "0.1.0"
description = "MCP server for Twelve Data financial API"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
]

[project.scripts]
twelvedata-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
